--- a/trunk/abstractpage_comp.tex
+++ b/trunk/abstractpage_comp.tex
@@ -5,7 +5,7 @@
 \end{abstract}
 
 \vskip\baselineskip\noindent
-This report documents the components for McStas version \version, 
+This report documents the components for McStas version \version,
 released \reldate .
 \vskip\baselineskip\noindent
 The authors are:
@@ -25,7 +25,7 @@ email: \verb+kristian.nielsen@mail.tele.dk+
 \vskip\baselineskip\noindent
 Emmanuel Farhi \\
 Institut Laue-Langevin, Grenoble, France \\
-email: \verb+farhi@ill.fr+ \\
+email: \verb+farhi@ill.fr+
 \vskip\baselineskip\noindent
 Klaus Lieutenant \\
 Institut Laue-Langevin, Grenoble, France \\
