--- a/trunk/guide.tex
+++ b/trunk/guide.tex
@@ -162,7 +162,7 @@ ${\bf v}_{\rm i}$ is computed by the formula
 \end{equation}
 This expression is arrived at by again considering the projection onto
 the mirror normal (see figure~\ref{f:guidereflect}). The reflectivity of the
-mirror is taken into account as explained in section~\ref{s:mirrorreflect}.
+mirror is taken into account as explained in section~\ref{s:mirror}.
 
 \begin{figure}
   \begin{center}
@@ -214,7 +214,7 @@ mirrors, and also implements guides with multiple channels as used in
 neutron bender devices. By setting the $m$ value of the supermirror
 coatings to zero, nonreflecting walls are simulated;
 this may be used for a very detailed simulation of a Soller collimator,
-see section~\ref{s:coll_linear}.
+see section~\ref{collimator-linear}.
 
 The input parameters are $w_1$, $h_1$, $w_2$, $h_2$, and $l$
 to set the guide dimensions as for {\bf Guide}
@@ -263,7 +263,7 @@ Waviness effects, supposed to be randomly distributed
 can be specified globally, or for each part of the guide section.
 Additionally, chamfers
 may be defined the same way.
-Chamfers originate from the substrate manufacturing, so that operators do not harm themselves with cutting edges./ Usual dimensions are about tens of millimeters. They are treated as absorbing edges around guide plates, both on the input and output surfaces, but also aside each mirror.
+Chamfers originate from the substrate manufacturing, so that operators do not harm themselves with cutting edges. Usual dimensions are about tens of millimeters. They are treated as absorbing edges around guide plates, both on the input and output surfaces, but also aside each mirror.
 
 The straight section of length $l$ may be divided into $n$ bits of same length
 within which chamfers are taken into account.
