--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -364,7 +364,7 @@ Binary files should be of type "float" (i.e. REAL*32) and "double" (i.e. REAL*64
 and should \emph{not} contain text header lines. These files are platform
 dependent (little or big endian).
 
-The $filename$ is first searched into the current directory (and all user additional locations specified using the \verb+-I+ option, see section~\ref{s:files}), and if not found, in the \verb+data+ sub-directory of the \verb+MCSTAS+ library location. \index{Library!Components!data}
+The $filename$ is first searched into the current directory (and all user additional locations specified using the \verb+-I+ option, see the 'Running \MCS\ ' chapter in the User Manual), and if not found, in the \verb+data+ sub-directory of the \verb+MCSTAS+ library location. \index{Library!Components!data}
 \index{Environment variable!MCSTAS} This way, you do not need to have local copies of the \MCS\ Library Data files (see table~\ref{t:comp-data}).
 
 A usage example for this library part may be:
