--- a/trunk/optics.tex
+++ b/trunk/optics.tex
@@ -10,20 +10,16 @@ as well as the ``generic'' component {\bf Arm}.
 
 \input{arm}
 
-\newpage
 \input{slit}
 
-\newpage
 \input{beamstop}
+
+\input{filter}
 
 \newpage
 \input{collimator_linear}
 
-\newpage
 \input{collimator_radial}
-
-\newpage
-\input{filter}
 
 \newpage
 \chapter{Reflecting optical components: mirrors, and guides}
@@ -52,5 +48,6 @@ and velocity selector used for partially monochromatize continuous beams.
 \newpage
 \input{v_selector}
 
+// there follows a chapter
 \newpage
 \input{monochromator}
