--- a/trunk/samples.tex
+++ b/trunk/samples.tex
@@ -72,7 +72,7 @@ Thus it may handle most samples except single crystals.
 \end{table}
 \subsection{Neutron scattering notation}
 In sample component, we use the notation common for neutron scattering,
-where the wave vector transfer os denoted the {\em scattering vector}
+where the wave vector transfer is denoted the {\em scattering vector}
 \begin{equation} \label{eq:q-transfer}
 {\bf q} \equiv {\bf k}_{\rm i} - {\bf k}_{\rm f} .
 \end{equation}
