--- a/trunk/source_gen.tex
+++ b/trunk/source_gen.tex
@@ -12,7 +12,7 @@ The wavelength/energy range to emit is specified either using center and half wi
 The flux spectrum is specified with the same Maxwellian parameters as in component Source\_Maxwell\_3 (refer to section \ref{source-maxwell}).
 
 Maxwellian parameters for some continuous sources
-are given in Table~\ref{t:source-params}.
+are given in Table~\ref{t:source-params}. As nobody knows exactly the characteristics of the sources (it is not easy to measure spectrum there), these figures should be used with caution.
 
 \begin{table}
   \begin{center}
