--- a/trunk/source_maxwell.tex
+++ b/trunk/source_maxwell.tex
@@ -55,3 +55,6 @@ The component {\bf Source\_gen} (see section \ref{source-gen})
 works on the same principle, but provides more options concerning
 wavelength/energy range specifications, shape, etc.
 
+Maxwellian parameters for some continuous sources
+are given in Table~\ref{t:source-params}. As nobody knows exactly the characteristics of the sources (it is not easy to measure spectrum there), these figures should be used with caution.
+
