--- a/trunk/ISISdoc.tex
+++ b/trunk/ISISdoc.tex
@@ -45,10 +45,10 @@ makes no significant difference to the other moderator faces.
 
 You MUST first set the environment variable `MCTABLES' to be the
 full path of the directory containing the table files:
-
+\begin{verbatim}
 BASH: export MCTABLES=/usr/local/lib/mcstas/contrib/ISIS\_tables/\\
 TCSH: setenv MCTABLES /usr/local/lib/mcstas/contrib/ISIS\_tables/
-
+\end{verbatim}
 In Windows this can be done using the `My Computer' properties and
 selecting the `Advanced' tab and the Environment variables button.
 This can of course be overridden by placing the appropriate moderator (h.{\it{face}}) files in the
@@ -64,6 +64,8 @@ moderator, for TS1: Water, H2, CH4, Merlin and TS2: Hydrogen,
 Groove, Narrow, Broad. ii) Views seen by each beamline, for TS1:
 Prisma, Maps, crisp etc. and for TS2: E1-E9 (East) and W1-W9
 (West).
+
+The \MCS\ distribution includes some example moderator files for TS1 (water,h2,ch4) and TS2 (broad, narrow, hydrogen, groove), but others are available at \verb+http://www.isis.rl.ac.uk/Computing/Software/MC/+, including instrument specific models.
 
 % Views seen by each beamline, for TS1 N-N (North) and S-S
 % (south) and TS2: E1-E9 (East) and W1-W9 (West).
