Typos in PowerN.comp and isotropic_sqw.tex
PowderN documentation now contains (more or less) copy-paste of Isotropic_sqw fileformat documentation. I have commented out the section about calculating the weight factor - will be written later, e.g. updated for mcstas 1.9.1


git-svn-id: https://svn.mccode.org/svn/McStasTeX@118 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/isotropic_sqw.tex
+++ b/trunk/isotropic_sqw.tex
@@ -306,7 +306,7 @@ Other column-based file formats may also be imported e.g. with parameters such a
 The last two parameters may as well be specified in the data file header with lines:
 \begin{verbatim}
   #Debye_Waller 1
-  #Detla_d/d    1e-3
+  #Delta_d/d    1e-3
 \end{verbatim}
 The powder description is then translated into $S(q)$ by using Eq. (\ref{eq:sq-F2}).
 In this case, the density $\rho = n/V_0$ is the number of atoms in the inverse volume of the unit cell.
